--- a/about.html
+++ b/about.html
@@ -9,11 +9,11 @@
     <script src="https://code.highcharts.com/maps/highmaps.js"></script>
     <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/mapdata/countries/br/br-all.js"></script>
-    <title>Homepage Nep</title>
+    <title>CISBAF - NEP</title>
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="/img/BANNER_SITE_NOVA_LOGO.png" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'" style="transform: scale(1); transition: transform 0.3s;"></a>
+        <a href="index.html"><img class="logo" src="BANNER_SITE_NOVA_LOGO.png" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'" style="transform: scale(1); transition: transform 0.3s;"></a>
         <ul>
             <li><a href="index.html">Página Inicial</a></li>
             <li><a href="#">Sobre</a></li>
@@ -62,7 +62,7 @@
                 <p></p>
             </div>
             <p style="text-align: center;"><br></p>
-            <p style="text-align: center;"><img src="/img/Logocount.png" alt="" width="100" height="100" role="presentation" class="img-fluid atto_image_button_text-bottom"><br></p>              
+            <p style="text-align: center;"><img src="Logocount.png" alt="" width="100" height="100" role="presentation" class="img-fluid atto_image_button_text-bottom"><br></p>              
         </div>
        
     </main><br><br><br>
@@ -75,10 +75,10 @@
 </body>
 <script src="about.js"></script>
 <footer>
-    <img id="imgfoot" src="/img/BANNER_SITE_NOVA_LOGO.png" alt="">
+    <img id="imgfoot" src="BANNER_SITE_NOVA_LOGO.png" alt="">
 <div class="icons">
-    <a href="https://www.instagram.com/cisbaf?igsh=YjZ4YjBlNGhhdW9z" target="_blank"><img src="/img/icones/instagram.png"  alt=""></a>
-    <a href="https://api.whatsapp.com/send/?phone=5521968843062&text&type=phone_number&app_absent=0" target="_blank"><img src="/img/icones/whatsapp.png" alt=""></a>
+    <a href="https://www.instagram.com/cisbaf?igsh=YjZ4YjBlNGhhdW9z" target="_blank"><img src="instagram.png"  alt=""></a>
+    <a href="https://api.whatsapp.com/send/?phone=5521968843062&text&type=phone_number&app_absent=0" target="_blank"><img src="whatsapp.png" alt=""></a>
 </div>
 <p><b>Cisbaf - Nep © 2025 - Todos os direitos reservados</b></p>
 
