--- a/curso2.html
+++ b/curso2.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/curso2.css">
-    <title>Homepage Nep</title>
+    <title>CISBAF - NEP</title>
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="/img/BANNER_SITE_NOVA_LOGO.png" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'" style="transform: scale(1); transition: transform 0.3s;"></a>
+        <a href="index.html"><img class="logo" src="BANNER_SITE_NOVA_LOGO.png" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'" style="transform: scale(1); transition: transform 0.3s;"></a>
         <ul>
             <li><a href="/index.html">Página Inicial</a></li>
             <li><a href="about.html">Sobre</a></li>
@@ -20,11 +20,11 @@
     <main>
         <div>
             <div class="corpo_nep">
-                <img src="/img/img_cursos/logo_aph.png" style="width: 90px;" alt="">
+                <img src="logo_aph.png" style="width: 90px;" alt="">
                 <!-- <h2>Cisbaf <span style="color: navy;">Nep</span></h2><br> -->
                 <h1>Curso Atualização para <br> Profissionais em APH (2025)</h1><br>
                 <p>O objetivo desse curso é capacitar, atualizar e promover conhecimentos específicos <br> aos participantes no atendimento pré-hospitalar, os profissionais de saúde que atuam nos <br> serviços de atendimento em Urgência e Emergência que prioritariamente prestam Serviços de Saúde.</p><br>
-                <img class="midianep" src="/img/img_cursos/midianep.png" alt="">
+                <img class="midianep" src="midianep.png" alt="">
                 <a href="https://cursosonline.nep.cisbaf.com/course/view.php?id=35"><button>Inscreva-se</button></a>
             </div>
             <div>
@@ -39,7 +39,7 @@
         <div>
             <div class="box_curso">
                 <div class="box_trilha">
-                    <img src="/img/icones/class.png" alt="">
+                    <img src="class.png" alt="">
                     <h1>Conteúdos da trilha:</h1><br>
                     <!-- <h3><b>Carga Horária:</b> <br> 40h</h3> -->
                     <h3>Videoaulas:</h3>Aulas voltada para o conteúdo proposto</p>
@@ -47,12 +47,12 @@
                     <h3>Questionário:</h3>Questões referentes as videoaulas</p>
                 </div>
                 <div class="box_trilha">
-                    <img src="/img/icones/clock.png" alt=""><br><br><br><br>
+                    <img src="clock.png" alt=""><br><br><br><br>
                    <h1>Carga Horária:</h1><br>
                     <h3>40 horas</h3>
                 </div>
                 <div class="box_trilha">
-                    <img src="/img/icones/certificado.png" alt=""><br><br><br><br>
+                    <img src="certificado.png" alt=""><br><br><br><br>
                     <h1><b>Certificado:</h1><br>
                     <h3>Certificado garantido ao atingir a nota mínima do curso.</h3>
                 </div>
@@ -97,10 +97,10 @@
 </body>
 <script src="curso1.js"></script>
 <footer>
-    <img id="imgfoot" src="/img/BANNER_SITE_NOVA_LOGO.png" alt="">
+    <img id="imgfoot" src="BANNER_SITE_NOVA_LOGO.png" alt="">
 <div class="icons">
-    <a href="https://www.instagram.com/cisbaf?igsh=YjZ4YjBlNGhhdW9z" target="_blank"><img src="/img/icones/instagram.png"  alt=""></a>
-    <a href="https://api.whatsapp.com/send/?phone=5521968843062&text&type=phone_number&app_absent=0" target="_blank"><img src="/img/icones/whatsapp.png" alt=""></a>
+    <a href="https://www.instagram.com/cisbaf?igsh=YjZ4YjBlNGhhdW9z" target="_blank"><img src="instagram.png"  alt=""></a>
+    <a href="https://api.whatsapp.com/send/?phone=5521968843062&text&type=phone_number&app_absent=0" target="_blank"><img src="whatsapp.png" alt=""></a>
 </div>
 <p><b>Cisbaf - Nep © 2025 - Todos os direitos reservados</b></p>
 
