--- a/curso2.html
+++ b/curso2.html
@@ -97,7 +97,7 @@
 </body>
 <script src="curso1.js"></script>
 <footer>
-    <img id="imgfoot" src="BANNER_SITE_NOVA_LOGO.png" alt="">
+    <a href="/index.html"><img id="imgfoot" src="BANNER_SITE_NOVA_LOGO.png" alt=""></a>
 <div class="icons">
     <a href="https://www.instagram.com/cisbaf?igsh=YjZ4YjBlNGhhdW9z" target="_blank"><img src="instagram.png"  alt=""></a>
     <a href="https://api.whatsapp.com/send/?phone=5521968843062&text&type=phone_number&app_absent=0" target="_blank"><img src="whatsapp.png" alt=""></a>
