--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         </div>
 
         <div>
-            <h1 style="margin-top: 20px; text-align: center;"><span style="color: brown;">CATÁLOGO</span> <span style="color: darkgoldenrod;">DE CURSOS</span></h1>
-            <div class="container" id="container">
+            <h1 style="margin-top: 20px; text-align: center;"><span style="color: brown;" id="container">CATÁLOGO</span> <span style="color: darkgoldenrod;">DE CURSOS</span></h1>
+            <div class="container" >
                 <div class="card">
                     <img src="logo_leilucas.png" alt="Curso Lei Lucas">
                     <div class="card-content">
