--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
        <header>
         <a href="index.html">
-            <img class="logo" src="/img/BANNER_SITE_NOVA_LOGO.png" 
+            <img class="logo" src="BANNER_SITE_NOVA_LOGO.png" 
                  onmouseover="this.style.transform='scale(1.2)'" 
                  onmouseout="this.style.transform='scale(1)'" 
                  style="transform: scale(1); transition: transform 0.3s;">
