--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li><a href="https://api.whatsapp.com/send/?phone=5521968843062" target="_blank">Fale conosco</a></li>
         </ul>
     </div>
+     <div id="overlay" class="overlay"></div>
 
     <div class="bannerCentro">
         <div class="bannerText">
