--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             
             <ul>
                 <li><a href="index.html">Página Inicial</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="/about.html">Sobre</a></li>
                 <li><a href="index.html#container">Catálogo de Cursos</a></li>
                 <li><a href="https://api.whatsapp.com/send/?phone=5521968843062&text&type=phone_number&app_absent=0" target="_blank">Fale conosco</a></li>
             </ul>
@@ -34,7 +34,7 @@
     <div class="side-menu" id="sideMenu">
         <button class="close-btn" onclick="toggleMenu()">✖</button>
         <ul>
-            <li><a href="#">Página Inicial</a></li>
+            <li><a href="index.html">Página Inicial</a></li>
             <li><a href="/about.html">Sobre</a></li>
             <li><a href="#container">Catálogo de Cursos</a></li>
             <li><a href="https://api.whatsapp.com/send/?phone=5521968843062" target="_blank">Fale conosco</a></li>
