--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <div class="side-menu" id="sideMenu">
         <button class="close-btn" onclick="toggleMenu()">✖</button>
         <ul>
-            <a href="index.html"><img class="logo" src="/img/BANNER_SITE_NOVA_LOGO.png" style="width: 200px;"></a>
+            <a href="index.html"><img class="logo" src="BANNER_SITE_NOVA_LOGO.png" style="width: 200px;"></a>
             <li><a href="index.html">Página Inicial</a></li>
             <li><a href="/about.html">Sobre</a></li>
             <li><a href="index.html#container">Catálogo de Cursos</a></li>
