--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div class="side-menu" id="sideMenu">
         <button class="close-btn" onclick="toggleMenu()">✖</button>
         <ul>
+            <a href="index.html"><img class="logo" src="BANNER_SITE_NOVA_LOGO.png" style="width: 200px;"></a>
             <li><a href="index.html">Página Inicial</a></li>
             <li><a href="/about.html">Sobre</a></li>
             <li><a href="#container">Catálogo de Cursos</a></li>
