--- a/curso1.html
+++ b/curso1.html
@@ -35,7 +35,7 @@
             <a href="index.html"><img class="logo" src="BANNER_SITE_NOVA_LOGO.png" style="width: 200px;"></a>
             <li><a href="index.html">Página Inicial</a></li>
             <li><a href="/about.html">Sobre</a></li>
-            <li><a href="#container">Catálogo de Cursos</a></li>
+            <li><a href="index.html#container">Catálogo de Cursos</a></li>
             <li><a href="https://api.whatsapp.com/send/?phone=5521968843062" target="_blank">Fale conosco</a></li>
         </ul>
     </div>
