--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="index.html#container">Catálogo de Cursos</a></li>
                 <li><a href="https://api.whatsapp.com/send/?phone=5521968843062&text&type=phone_number&app_absent=0" target="_blank">Fale conosco</a></li>
             </ul>
+            <a href="https://cursosonline.nep.cisbaf.com/homologacao/login/index.php" ><button class="btnAcess">Entrar</button></a>
         </div>
     
         <!-- Ícone do menu hamburguer -->
@@ -40,6 +41,7 @@
             <li><a href="#container">Catálogo de Cursos</a></li>
             <li><a href="https://api.whatsapp.com/send/?phone=5521968843062" target="_blank">Fale conosco</a></li>
         </ul>
+        <a href="https://cursosonline.nep.cisbaf.com/homologacao/login/index.php" ><button class="btnAcess">Entrar</button></a>
     </div>
      <div id="overlay" class="overlay"></div>
 
