--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
              style="transform: scale(1); transition: transform 0.3s;">
         </a>
         <div id="mainhead">
-            
-            <ul>
-                <li><a href="index.html">Página Inicial</a></li>
-                <li><a href="/about.html">Sobre</a></li>
-                <li><a href="index.html#container">Catálogo de Cursos</a></li>
-                <li><a href="https://api.whatsapp.com/send/?phone=5521968843062&text&type=phone_number&app_absent=0" target="_blank">Fale conosco</a></li>
-            </ul>
+                <a href="index.html">Página Inicial</a>
+                <a href="/about.html">Sobre</a>
+                <a href="index.html#container">Catálogo de Cursos</a>
+               <a href="https://api.whatsapp.com/send/?phone=5521968843062&text&type=phone_number&app_absent=0" target="_blank">Fale conosco</a>
             <a href="https://cursosonline.nep.cisbaf.com/homologacao/login/index.php" ><button class="btnAcess">Entrar</button></a>
         </div>
     
@@ -34,13 +31,11 @@
     <!-- Menu lateral -->
     <div class="side-menu" id="sideMenu">
         <button class="close-btn" onclick="toggleMenu()">✖</button>
-        <ul>
             <a href="index.html"><img class="logo" src="BANNER_SITE_NOVA_LOGO.png" style="width: 200px;"></a>
-            <li><a href="index.html">Página Inicial</a></li>
-            <li><a href="/about.html">Sobre</a></li>
-            <li><a href="#container">Catálogo de Cursos</a></li>
-            <li><a href="https://api.whatsapp.com/send/?phone=5521968843062" target="_blank">Fale conosco</a></li>
-        </ul>
+            <a href="index.html">Página Inicial</a>
+           <a href="/about.html">Sobre</a>
+            <a href="#container">Catálogo de Cursos</a>
+            <a href="https://api.whatsapp.com/send/?phone=5521968843062" target="_blank">Fale conosco</a>
         <a href="https://cursosonline.nep.cisbaf.com/homologacao/login/index.php" ><button class="btnAcess">Entrar</button></a>
     </div>
      <div id="overlay" class="overlay"></div>
