--- a/curso1.html
+++ b/curso1.html
@@ -45,7 +45,7 @@
                
                 <h1>Curso Primeiros Socorros <br> com Ênfase na Lei Lucas</h1><br>
                 <p>O objetivo do curso de primeiros socorros da Lei Lucas é capacitar professores e funcionários <br> de escolas e instituições similares para agir rapidamente em emergências, protegendo as crianças.</p>
-                <img class="midianep" src="midianep.png" alt="">
+                <img class="midianep" src="midianep1.png" alt="">
                 <a href="https://cursosonline.nep.cisbaf.com/course/view.php?id=32"><button>Inscreva-se</button></a>
             </div>
         </div>
