--- a/curso2.html
+++ b/curso2.html
@@ -45,7 +45,7 @@
                 <!-- <h2>Cisbaf <span style="color: navy;">Nep</span></h2><br> -->
                 <h1>Curso Atualização para <br> Profissionais em APH (2025)</h1><br>
                 <p>O objetivo desse curso é capacitar, atualizar e promover conhecimentos específicos <br> aos participantes no atendimento pré-hospitalar, os profissionais de saúde que atuam nos <br> serviços de atendimento em Urgência e Emergência que prioritariamente prestam Serviços de Saúde.</p><br>
-                <img class="midianep" src="midianep.png" alt="">
+                <img class="midianep" src="midianep2.png" alt="">
                 <a href="https://cursosonline.nep.cisbaf.com/course/view.php?id=35"><button>Inscreva-se</button></a>
             </div>
             <div>
