--- a/curso2.html
+++ b/curso2.html
@@ -32,7 +32,7 @@
             <a href="index.html"><img class="logo" src="BANNER_SITE_NOVA_LOGO.png" style="width: 200px;"></a>
             <a href="index.html">Página Inicial</a>
            <a href="/about.html">Sobre</a>
-            <a href="#container">Catálogo de Cursos</a>
+            <a href="index.html#container">Catálogo de Cursos</a>
             <a href="https://api.whatsapp.com/send/?phone=5521968843062" target="_blank">Fale conosco</a>
         <a href="https://cursosonline.nep.cisbaf.com/homologacao/login/index.php" ><button class="btnAcess">Entrar</button></a>
     </div>
