--- a/curso2.html
+++ b/curso2.html
@@ -99,7 +99,7 @@
             <div class="accordion-item">
                 <button class="accordion-head">Conteúdo programático</button>
                 <div class="accordion-body">
-                    <p>O conteúdo foi estruturado em 9(nove) aulas a saber: <br><br>
+                    <p>O conteúdo foi estruturado em 8(oito) aulas a saber: <br><br>
                     <b>
                         Aula 1 - Conduta frente ao Trauma e Cinemática do trauma <br>
                         Aula 2 - Triagem e Avaliação Primária - Múltiplas Vítimas - START <br>
@@ -108,8 +108,7 @@
                         Aula 5 - Assistência ao parto consumado <br>
                         Aula 6 - Atendimento ao Queimado <br>
                         Aula 7 - Interação medicamentosa <br>
-                        Aula 8 - Atendimento a pacientes que recusam atendimento e/ou transporte ou de seus responsáveis <br>
-                        Aula 9 – Atendimento às vítimas de Afogamento.
+                        Aula 8 - Atendimento a pacientes que recusam atendimento e/ou transporte ou de seus responsáveis
                     </b>
                 </div>
             </div>
