--- a/curso1.html
+++ b/curso1.html
@@ -18,6 +18,7 @@
            <a href="index.html">Página Inicial</a>
                 <a href="/about.html">Sobre</a>
                 <a href="index.html#container">Catálogo de Cursos</a>
+            <a href="https://cursosonline.nep.cisbaf.com/mod/page/view.php?id=566">Perguntas Frequentes</a>
                <a href="https://api.whatsapp.com/send/?phone=5521968843062&text&type=phone_number&app_absent=0" target="_blank">Fale conosco</a>
             <a href="https://cursosonline.nep.cisbaf.com/homologacao/login/index.php" ><button class="btnAcess">Entrar</button></a>
         </div>
