--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             <a href="index.html">Página Inicial</a>
            <a href="/about.html">Sobre</a>
             <a href="#container">Catálogo de Cursos</a>
+         <a href="https://cursosonline.nep.cisbaf.com/mod/page/view.php?id=566">Perguntas Frequentes</a>
+                <a href="https://cursosonline.nep.cisbaf.com/mod/page/view.php?id=567">História do NEP</a>
             <a href="https://api.whatsapp.com/send/?phone=5521968843062" target="_blank">Fale conosco</a>
         <a href="https://cursosonline.nep.cisbaf.com/homologacao/login/index.php" ><button class="btnAcess">Entrar</button></a>
     </div>
