--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
                 
                 <div class="card">
-                    <img src="Sinais Vitais img.jpeg" alt="Curso de Sinais Vitais">
+                    <img src="Sinais Vitais img.png" alt="Curso de Sinais Vitais">
                     <div class="card-content">
                         <h4>Curso de Atualização da Técnica de Aferição dos Sinais Vitais e Escala de Glasgow</h4><br>
                         <p><b>Período do curso:</b> <br>Em breve.</p>
