--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <h4>Curso de Atualização da Técnica de Aferição dos Sinais Vitais e Escala de Glasgow</h4><br>
                         <p><b>Período do curso:</b> <br>Em breve.</p>
                         <p><b>Carga Horária:</b> 08h</p>
-                        <a href="#">Saiba mais</a>
+                        <a href="/curso3.html">Saiba mais</a>
                     </div>
                 </div>
 
