--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <h4>Curso de Atualização em Fundamentos de Enfermagem</h4><br>
                         <p><b>Período do curso:</b> <br>Em breve.</p>
                         <p><b>Carga Horária:</b> 24h</p>
-                        <a href="#">Saiba mais</a>
+                        <a href="/curso4.html">Saiba mais</a>
                     </div>
                 </div>
             </div>
