--- a/curso3.html
+++ b/curso3.html
@@ -47,8 +47,8 @@
             <div class="corpo_nep">
                 <img src="Sinais Vitais img.png" style="width: 90px;" alt="">
                
-                <h1>Curso Primeiros Socorros <br> com Ênfase na Lei Lucas</h1><br>
-                <p>O objetivo do curso de primeiros socorros da Lei Lucas é capacitar professores e funcionários <br> de escolas e instituições similares para agir rapidamente em emergências, protegendo as crianças.</p>
+                <h1>Curso de Atualização de Aferição <br>dos Sinais Vitais e Escala Glasgow</h1><br>
+                <p>O objetivo desse curso é capacitar, atualizar e promover conhecimentos <br> específicos aos participantes, na mensuração dos sinais vitais.</p>
                 <img class="midianep" src="#" alt="">
                 <a href="#" class="subscribe"><button>Inscreva-se</button></a>
             </div>
