--- a/curso4.html
+++ b/curso4.html
@@ -47,7 +47,7 @@
             <div class="corpo_nep">
                 <img src="logo_fundEnf.png" style="width: 90px;" alt="">
                 <!-- <h2>Cisbaf <span style="color: navy;">Nep</span></h2><br> -->
-                <h1>CURSO DE ATUALIZAÇÃO EM FUNDAMENTOS DE ENFERMAGEM</h1><br>
+                <h1>Curso de Atualização em Fundamentos de Enfermagem</h1><br>
                 <p>O objetivo desse curso é atualizar os profissionais de saúde <br>(técnicos e enfermeiros) em temas atuais e de relevância para a aplicabilidade em sua assistência.</p><br>
                 <img class="midianep" src="#" alt="">
                 <a href="#" class="subscribe"><button>Inscreva-se</button></a>
