--- a/curso3.html
+++ b/curso3.html
@@ -48,7 +48,7 @@
                 <img src="Sinais Vitais img.png" style="width: 90px;" alt="">
                
                 <h1>Curso de Atualização de Aferição <br>dos Sinais Vitais e Escala Glasgow</h1><br>
-                <p>O objetivo desse curso é capacitar, atualizar e promover conhecimentos <br> específicos aos participantes, na mensuração dos sinais vitais.</p>
+                <p>O objetivo desse curso é capacitar, atualizar e promover conhecimentos específicos aos participantes, na mensuração dos sinais vitais.</p>
                 <img class="midianep" src="#" alt="">
                 <a href="#" class="subscribe"><button>Inscreva-se</button></a>
             </div>
