--- a/curso4.html
+++ b/curso4.html
@@ -103,7 +103,7 @@
             <div class="accordion-item">
                 <button class="accordion-head">Conteúdo programático</button>
                 <div class="accordion-body">
-                    <p>O conteúdo foi estruturado em 8(oito) aulas a saber: <br><br>
+                    <p>O conteúdo foi estruturado em 7(sete) aulas a saber: <br><br>
                     <b>
                         Aula 1 - Exame físico 1 <br>
                         Aula 2 - Exame físico 2  <br>                       
