--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         </a>
         <div id="mainhead">
            <a href="index.html">Página Inicial</a>
-                <a href="/about.html">Sobre</a>
+                <a href="/about.html">Sobre o NEP</a>
                 <a href="index.html#container">Catálogo de Cursos</a>
             <a href="https://cursosonline.nep.cisbaf.com/mod/page/view.php?id=566">Perguntas Frequentes</a>
                 <a href="https://cursosonline.nep.cisbaf.com/mod/page/view.php?id=567">História do NEP</a>
