--- a/curso1.html
+++ b/curso1.html
@@ -33,7 +33,7 @@
         <button class="close-btn" onclick="toggleMenu()">✖</button>
             <a href="index.html"><img class="logo" src="BANNER_SITE_NOVA_LOGO.png" style="width: 200px;"></a>
             <a href="index.html">Página Inicial</a>
-           <a href="/about.html">Sobre</a>
+           <a href="/about.html">Sobre o NEP</a>
             <a href="index.html#container">Catálogo de Cursos</a>
         <a href="https://cursosonline.nep.cisbaf.com/mod/page/view.php?id=566">Perguntas Frequentes</a>
                 <a href="https://cursosonline.nep.cisbaf.com/mod/page/view.php?id=567">História do NEP</a>
