--- a/about.html
+++ b/about.html
@@ -96,7 +96,17 @@
 <canvas id="alunosChart"></canvas>
 <!-- <h2 style="text-align: center;">Mapa de Inscritos por Estado</h2>
 <div id="map"></div> -->
-<div id="mapa"></div>
+<div id="mapa"></div><br>
+
+        <h2>Estatística em Números</h2><br>
+        <p style="color: black;">Disponibiliza dados e informações relativas as capacitações já realizadas pela
+            Plataforma CISBAF NEP, como os
+            temas, total de inscritos por curso, municípios participantes, entre outros indicadores, de forma dinâmica.
+            O acesso facilitado a dados reais e precisos permite a análise de informações de acordo com as mais variadas
+            necessidades dos gestores.</p><br>
+        <a href="https://cursosonline.nep.cisbaf.com/mod/page/view.php?id=537"><button
+                style="color: #fff; background-color: rgb(17, 136, 204); width: 200px; height: 45px; font-size: 20px; border: none; cursor: pointer;">Nossos
+                números ▶</button></a>
     
 </body>
 <script src="about.js"></script>
