--- a/timeline.html
+++ b/timeline.html
@@ -9,7 +9,7 @@
 </head>
 <header>
     <a href="index.html">
-    <img class="logo" src="/img/BANNER_SITE_NOVA_LOGO.png" 
+    <img class="logo" src="BANNER_SITE_NOVA_LOGO.png" 
          onmouseover="this.style.transform='scale(1.2)'" 
          onmouseout="this.style.transform='scale(1)'" 
          style="transform: scale(1); transition: transform 0.3s;">
@@ -32,7 +32,7 @@
 <div class="side-menu" id="sideMenu">
     <button class="close-btn" onclick="toggleMenu()">✖</button>
     
-        <a href="index.html"><img class="logo" src="/img/BANNER_SITE_NOVA_LOGO.png" style="width: 200px;"></a>
+        <a href="index.html"><img class="logo" src="BANNER_SITE_NOVA_LOGO.png" style="width: 200px;"></a>
         <a href="index.html">Página Inicial</a>
         <a href="/about.html">Sobre o NEP </a>
         <a href="index.html#container">Catálogo de Cursos</a>
@@ -49,7 +49,7 @@
         <div class="container left">
             <div class="year">2011</div>
             <div class="content">
-                <img src="/img/hist/mapaHist.png" alt="Evento 2011">
+                <img src="mapaHist.png" alt="Evento 2011">
                 <h3>
                     Adesão e Evolução na Região Metropolitana 1 - Baixada Fluminense.</h3>
                 <h4>Novembro de 2011 - Adesão ao projeto</h4><br>
@@ -92,7 +92,7 @@
         <div class="container left">
             <div class="year">2013</div>
             <div class="content">
-                <img src="/img/hist/enconHist.jpg" alt="Evento 2013">
+                <img src="enconHist.jpg" alt="Evento 2013">
                 <h3>Agosto de 2013 - Implementação do Telessaúde</h3><br>
                 <p>Após diversos desafios superadores e rompimentos de paradigmas, em 22 de agosto de 2013, foi
                     instalado o <b>Núcleo Telessaúde Baixada Fluminense</b>, através de uma videoconferência com o tema:
@@ -161,7 +161,7 @@
         <div class="container right">
             <div class="year">2021</div>
             <div class="content">
-                <img src="/img/img_cursos/midianep.png" alt="Evento 2012">
+                <img src="midianep.png" alt="Evento 2012">
                 <h3>Plataforma NEP 2020 - 2023</h3><br>
                 <p>O primeiro curso online ministrado pelo Cisbaf foi realizado através da plataforma <b>Classroom</b>,
                     fornecida pelo Google de forma gratuita, ele foi desenvolvido e oferecido no ano de 2020.</p>
@@ -179,10 +179,10 @@
 </body>
 <script src="/index.js"></script>
 <footer>
-    <a href="index.html"><img id="imgfoot" src="/img/BANNER_SITE_NOVA_LOGO.png" alt=""></a>
+    <a href="index.html"><img id="imgfoot" src="BANNER_SITE_NOVA_LOGO.png" alt=""></a>
     <div class="icons">
-        <a href="https://www.instagram.com/cisbaf?igsh=YjZ4YjBlNGhhdW9z" target="_blank"><img src="/img/icones/instagram.png"  alt="" ></a>
-        <a href="https://api.whatsapp.com/send/?phone=5521968843062&text&type=phone_number&app_absent=0" target="_blank"><img src="/img/icones/whatsapp.png" alt=""></a>
+        <a href="https://www.instagram.com/cisbaf?igsh=YjZ4YjBlNGhhdW9z" target="_blank"><img src="instagram.png"  alt="" ></a>
+        <a href="https://api.whatsapp.com/send/?phone=5521968843062&text&type=phone_number&app_absent=0" target="_blank"><img src="whatsapp.png" alt=""></a>
 </div>
 
 <p><b>Cisbaf - Nep © 2025 - Todos os direitos reservados</b></p>
