--- a/timeline.html
+++ b/timeline.html
@@ -162,7 +162,7 @@
             <div class="year">2021</div>
             <div class="content">
                 <img src="midianep.png" alt="Evento 2012">
-                <h3>Plataforma NEP 2020 - 2023</h3><br>
+                <h3>Plataforma NEP 2020 - Atualmente</h3><br>
                 <p>O primeiro curso online ministrado pelo Cisbaf foi realizado através da plataforma <b>Classroom</b>,
                     fornecida pelo Google de forma gratuita, ele foi desenvolvido e oferecido no ano de 2020.</p>
                 <p>Posteriormente, afim de aprimorar sua plataforma e proporcionar uma experiência ainda mais agradável para
