--- a/timeline.html
+++ b/timeline.html
@@ -49,7 +49,7 @@
         <div class="container left">
             <div class="year">2011</div>
             <div class="content">
-                <img src="mapaHist.png" alt="Evento 2011">
+                <img src="mapaHist2.png" alt="Evento 2011">
                 <h3>
                     Adesão e Evolução na Região Metropolitana 1 - Baixada Fluminense.</h3>
                 <h4>Novembro de 2011 - Adesão ao projeto</h4><br>
