--- a/timeline.html
+++ b/timeline.html
@@ -141,7 +141,7 @@
         <div class="container left">
             <div class="year">2020</div>
             <div class="content">
-                <!-- <img src="https://via.placeholder.com/150" alt="Evento 2020"> -->
+              <img src="presOnHist.png" alt="Evento 2020">
                 <h3>2020 - Treinamentos Online e Presenciais</h3><br>
                 <p>Em 2020, com a pandemia do coronavírus e todo o isolamento social estabelecido, os cursos presenciais
                     oferecidos pelo Cisbaf precisaram ser interrompidos.</p>
