--- a/timeline.html
+++ b/timeline.html
@@ -62,7 +62,7 @@
         <div class="container right">
             <div class="year">2012</div>
             <div class="content">
-                <img src="oldSedeHist.JPG" style="width: 250px;" alt="Evento 2012">
+                <img src="oldSedeHist.JPG" alt="Evento 2012">
                 <h3>Junho de 2012 - Definição da sede</h3><br>
                 <p>Em dezembro do mesmo ano, os Municípios começam a se estruturar adquirindo equipamentos necessários
                     para implementação e começam também a definir o melhor local para implantação da sede física do
