--- a/timeline.html
+++ b/timeline.html
@@ -18,7 +18,7 @@
             <a href="index.html">Página Inicial</a>
             <a href="about.html">Sobre o NEP</a>
             <a href="index.html#container">Catálogo de Cursos</a>
-            <a href="quest.html">Perguntas Frequentes</a>
+            <a href="https://cursosonline.nep.cisbaf.com/mod/page/view.php?id=566">Perguntas Frequentes</a>
             <a href="timeline.html">História do NEP</a>
             <a href="https://api.whatsapp.com/send/?phone=5521968843062&text&type=phone_number&app_absent=0" target="_blank">Fale conosco</a>
         <a href="https://cursosonline.nep.cisbaf.com/homologacao/login/index.php" ><button class="btnAcess">Entrar</button></a>
@@ -36,7 +36,7 @@
         <a href="index.html">Página Inicial</a>
         <a href="/about.html">Sobre o NEP </a>
         <a href="index.html#container">Catálogo de Cursos</a>
-        <a href="quest.html">Perguntas Frequentes</a>
+        <a href="https://cursosonline.nep.cisbaf.com/mod/page/view.php?id=566">Perguntas Frequentes</a>
         <a href="timeline.html">História do NEP</a>
         <a href="https://api.whatsapp.com/send/?phone=5521968843062" target="_blank">Fale conosco</a>
         <a href="https://cursosonline.nep.cisbaf.com/homologacao/login/index.php"><button class="btnAcess">Entrar</button></a>
