--- a/timeline.html
+++ b/timeline.html
@@ -77,7 +77,7 @@
                 </p>
                 <p>Após operação, constata-se que o retorno sobre o investimento no estabelecimento do Núcleo de
                     Telessaúde na região é extremamente significativo, trazendo diversas melhorias na resolubilidade da
-                    assistência prestada à população, entre eles estão:</p>
+                    assistência prestada à população, entre eles estão:</p><br>
                 <ul>
                     <li>Redução de encaminhamentos desnecessários devido intervenção por consulta;</li>
                     <li>Melhoria da qualidade assistencial;</li>
