--- a/curso2.html
+++ b/curso2.html
@@ -38,7 +38,7 @@
         <a href="https://cursosonline.nep.cisbaf.com/mod/page/view.php?id=566">Perguntas Frequentes</a>
                 <a href="timeline.html">História do NEP</a>
             <a href="https://api.whatsapp.com/send/?phone=5521968843062" target="_blank">Fale conosco</a>
-        <a href="https://cursosonline.nep.cisbaf.com/homologacao/login/index.php" ><button class="btnAcess">Entrar</button></a>
+        <a href="https://cursosonline.nep.cisbaf.com/homologacao/course/view.php?id=25" ><button class="btnAcess">Entrar</button></a>
     </div>
      <div id="overlay" class="overlay"></div>
 
