--- a/curso2.html
+++ b/curso2.html
@@ -38,7 +38,7 @@
         <a href="https://cursosonline.nep.cisbaf.com/mod/page/view.php?id=566">Perguntas Frequentes</a>
                 <a href="timeline.html">História do NEP</a>
             <a href="https://api.whatsapp.com/send/?phone=5521968843062" target="_blank">Fale conosco</a>
-        <a href="https://cursosonline.nep.cisbaf.com/homologacao/course/view.php?id=25" ><button class="btnAcess">Entrar</button></a>
+        <a href="https://cursosonline.nep.cisbaf.com/homologacao/login/index.php" ><button class="btnAcess">Entrar</button></a>
     </div>
      <div id="overlay" class="overlay"></div>
 
@@ -50,7 +50,7 @@
                 <h1>Curso Atualização para <br> Profissionais em APH (2025)</h1><br>
                 <p>O objetivo desse curso é capacitar, atualizar e promover conhecimentos específicos <br> aos participantes no atendimento pré-hospitalar, os profissionais de saúde que atuam nos <br> serviços de atendimento em Urgência e Emergência que prioritariamente prestam Serviços de Saúde.</p><br>
                 <img class="midianep" src="midianep2.png" alt="">
-                <a href="https://cursosonline.nep.cisbaf.com/course/view.php?id=35" class="subscribe"><button>Inscreva-se</button></a>
+                <a href="https://cursosonline.nep.cisbaf.com/homologacao/course/view.php?id=25" class="subscribe"><button>Inscreva-se</button></a>
             </div>
             <div>
 
