--- a/timeline.html
+++ b/timeline.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="timeline.css">
+    <link rel="icon" type="image/x-icon" href="favicon_cisbaf.png">
     <title>CISBAF - NEP</title>
 </head>
 <header>
