--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         
     </main>
     <img class="midianep" src="midianep.png">
-    
+    <button id="backToTop" class="back-to-top">↑</button>
 </body>
 <script src="index.js"></script>
 <footer>
