--- a/timeline.html
+++ b/timeline.html
@@ -177,6 +177,7 @@
         </div>
 
     </div>
+    <button id="backToTop" class="back-to-top">↑</button>
 </body>
 <script src="/index.js"></script>
 <footer>
