--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
         <a href="https://cursosonline.nep.cisbaf.com/mod/page/view.php?id=537"><button
                 style="color: #fff; background-color: rgb(17, 136, 204); width: 200px; height: 45px; font-size: 20px; border: none; cursor: pointer;">Nossos
                 números ▶</button></a>
-    
+    <button id="backToTop" class="back-to-top">↑</button>
 </body>
 <script src="about.js"></script>
 <footer>
