--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </a>
             
                     <a href="#" style="width: 100%; flex-shrink: 0; position: relative;" target="_blank">
-                        <img src="midianep2.png" alt="" style="width: 100%;">
+                        <img src="bannleilucas.png" alt="" style="width: 100%;">
                         <div style="position: absolute; bottom: 0; width: 100%; background-color: rgba(0, 0, 0, 0.6); color: #fff; padding: 10px; text-align: center;">
                             <h1 style="margin: 0;">Em breve:</h1>
                             <p style="margin: 5px 0 0;">Atualização para Profissionais no Atendimento Pré Hospitalar(2025)</p>
