--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="carrosImg">
             
                     <a href="https://collabe.app/quiz?group=2246&amp;id=6pIl" style="width: 100%; flex-shrink: 0; text-decoration: none; position: relative;" target="_blank">
-                        <img src="gamedengue5.png" alt="" style="width: 100%;">
+                        <img src="gamedengue2.jpg" alt="" style="width: 100%;">
                         <div style="position: absolute; bottom: 0; width: 100%; background-color: rgba(0, 0, 0, 0.6); color: #fff; padding: 10px; text-align: center;">
                             <h1 style="margin: 0;">Gamificação - Combate a Dengue 🎯</h1>
                             <p style="margin: 5px 0 0;">Clique e participe da atividade interativa para conscientizar na luta contra a Dengue</p>
