--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="sidebars">
             <a data-bg="0" data-link="./catCursos.html">Catálogo de Cursos</a>
             <a data-bg="1" data-link="./miniCursos.html">Mini Cursos - OCI</a>
-            <a data-bg="3" data-link="./pilula.html">Pílula de conhecimento</a>
+            <a data-bg="3" data-link="./pilula.html">Pílulas de conhecimento</a>
             <!-- <a data-bg="2" data-link="#">Listas de Protocolos</a> -->
         </div>
 
