--- a/pilula.html
+++ b/pilula.html
@@ -14,20 +14,20 @@
     <side-menu></side-menu>
    
   <div style="text-align: center; margin-top: 10px;">
-    <p><span><img src="./assets/midia/logoNep.png" width="120px" alt=""></span></p>
+    <p><span><img src="/src/assets/midia/logoNep.png" width="120px" alt=""></span></p>
       <h1 style="color: rgb(54, 45, 45);"> Pílulas de Conhecimento</h1>
   <h4 style="color: rgb(54, 45, 45);">Mini aulas rápidas, diretas e com conteúdo visual + resumo.</h4><br>
   </div>
   <main class="container">
 
     <!-- FILTRO DE CATEGORIAS (opcional) -->
-    <!-- <div class="filter">
+    <div class="filter">
       <button class="active" data-cat="all">Todos</button>
       <button data-cat="avc">AVC</button>
       <button data-cat="desmaio">Desmaio</button>
-      <button data-cat="js">JavaScript</button>
+      <!-- <button data-cat="js">JavaScript</button> -->
       <button data-cat="outros">Outros</button>
-    </div> -->
+    </div>
 
     <section class="grid" id="cards">
 
