--- a/miniCursos.html
+++ b/miniCursos.html
@@ -30,6 +30,18 @@
 
                 <div class="card">
                     <div class="label-tag">Curso contínuo autoinstrutivo</div>
+                    <img src="./assets/midia/logo_oci_otorrino.png" alt="Curso OCI OTORRINO">
+                    <div class="card-content">
+                        <h4>Protocolo de Acesso as Ofertas de Cuidados Integrados na Atenção Especializada em Otorrinolaringologia
+                        </h4><br>
+                        <p><b>Período do curso:</b> <br>A partir de 14 de janeiro de 2026</p>
+                        <p><b>Carga Horária:</b> 04h</p>
+                        <a href="OCIOtorrino.html">Saiba mais</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="label-tag">Curso contínuo autoinstrutivo</div>
                     <img src="./assets/midia/logo_pmae_oncol.png" alt="Curso OCI ONC">
                     <div class="card-content">
                         <h4>Protocolo de Acesso as Ofertas de Cuidados Integrados na Atenção Especializada em Oncologia
